@@ -2,6 +2,7 @@
 Version: 1.1.1
 Date: ???
   Bugfixes:
+    - Fixed selected weapon slot being reset to slot 1 when spidertron is reactivated
     - Fixed crash when a vehicle containing a player is destroyed
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
